--- a/ShoesManagement/ShoeManagementApp/ShoeManagementApp.csproj
+++ b/ShoesManagement/ShoeManagementApp/ShoeManagementApp.csproj
@@ -11,4 +11,25 @@
     <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="frmProductUpdate - Copy.Designer.cs">
+      <DependentUpon>frmProductUpdate.Designer.cs</DependentUpon>
+    </Compile>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="frmProductUpdate - Copy.resx">
+      <DependentUpon>frmProductUpdate.resx</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
